# BigGo-MCP-Server

./: .drone.yml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: pr-test.yaml  push-test.yaml
data/: ec_list_ret.json  original_prod_search_ret.json  price_history_ret.json
docs/: build.md
src/biggo_mcp_server/: __init__.py  server.py  utils.py
src/biggo_mcp_server/lib/: access_token.py  log.py  price_history.py  server_setup.py  spec_search.py  tools.py  utils.py
src/biggo_mcp_server/services/: price_history.py  product_search.py  spec_search.py
src/biggo_mcp_server/tools/: product_search.py  spec_search.py
src/biggo_mcp_server/types/: ec_list_ret.py  price_history_ret.py  product_search_ret.py  responses.py  setting.py
src/biggo_mcp_server/types/api_ret/: price_history.py  product_search.py  spec.py
test/: helper.py  test_exfiltration.py  test_extract.py  test_responses.py  test_services.py  test_tools.py  test_types.py
tools/: compaire_ret_size.py
